@@ -1,7 +1,7 @@
 { "name": "vzaar",
   "description": "The PHP client for Vzaar API.",
   "type": "library",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "keywords": [ "vzaar", "video", "api" ],
   
   "homepage": "https://github.com/vzaar/vzaar-api-php",
